--- a/.github/workflows/atlassian-downloads.yml
+++ b/.github/workflows/atlassian-downloads.yml
@@ -17,13 +17,18 @@ jobs:
         run: |
           mkdir build
           for product in {jira,confluence,stash} ; do \
-            curl --fail -o build/eap-${product}.json "https://my.atlassian.com/download/feeds/eap/$product.json" ; done
+            curl --silent --fail --show-error -o build/eap-${product}.json "https://my.atlassian.com/download/feeds/eap/${product}.json" ; \
+            echo "Downloaded eap-${product}.json" ; done
           for product in {jira-software,confluence,stash} ; do \
-            curl --fail -o build/current-${product}.json "https://my.atlassian.com/download/feeds/current/$product.json" ; \
-            curl --fail -o build/archived-${product}.json "https://my.atlassian.com/download/feeds/archived/$product.json" ; done
+            curl --silent --fail --show-error -o build/current-${product}.json "https://my.atlassian.com/download/feeds/current/${product}.json" ; \
+            echo "Downloaded current-${product}.json" ; \
+            curl --silent --fail --show-error -o build/archived-${product}.json "https://my.atlassian.com/download/feeds/archived/${product}.json" ; \
+            echo "Downloaded archived-${product}.json" ; done
       - name: JSONP to JSON feed
         run: |
-          for f in build/*.json ; do python atlassian/downloads/jsonp2feed.py $f ; done
+          for f in build/*.json ; do \
+            echo "Running jsonp2feed ${f}" ; \
+            python atlassian/downloads/jsonp2feed.py ${f} ; done
       - name: Publish docs
         run: |
           mkdir -p docs/atlassian/downloads
